# saturation-changer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
adl/: adl_sdk.h  adl_structures.h
src/: AmdSaturationController.cpp  AmdSaturationController.h  CMakeLists.txt  LinuxProcessFinder.cpp  LinuxProcessFinder.h  NvidiaSaturationController.cpp  NvidiaSaturationController.h  ProcessFinder.h  ProcessMonitor.cpp  ProcessMonitor.h  SaturationController.h  WinProcessFinder.cpp  WinProcessFinder.h  Window.cpp  Window.h  main.cpp
src/config/: CMakeLists.txt  SaturationChangerConfig.h.in
src/icons/: icons.qrc
src/proto/: CMakeLists.txt  Configuration.proto
